tests/ui/privacy/pub-priv-dep/diamond_deps.stderr
error: type `diamond_priv_dep::SharedInType` from private dependency 'diamond_priv_dep' in public interface
  --> $DIR/diamond_deps.rs:42:5
   |
LL |     pub f: diamond_priv_dep::SharedInType
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/diamond_deps.rs:27:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

